# GeoSync

./: .actrc  .coveragerc  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .golangci.yml  .importlinter  .pre-commit-config.yaml  .secrets.baseline  .secretsignore  .trufflehog-exclude  AUDIT_REPORT.md  BASELINE.md  CHANGELOG.md  CITATION.cff  CLAIMS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY.md  DEPLOYMENT.md  DESIGN.md  DISHA_BA_CORRELATION_FINAL_REPORT.md  DISHA_SAFE_120_WORDS_v2.md  DOCUMENTATION_SUMMARY.md  Dockerfile  INSTITUTIONAL_OVERVIEW.md  INVENTORY.json  ISSUE_DRAFTS_X10R.md  LICENSE  MANIFEST.sha256  Makefile  NOTICE  PHYSICS_IMPLEMENTATION_SUMMARY.md  PROJECT_DEVELOPMENT_STAGE.md  (+37 more)
.claude/: PROMPTS.md  README.md  commit_acceptor_policy.yaml  commit_acceptor_template.yaml
.exocortex/: GLOSSARY.md  INVARIANTS_INDEX.md  METHODOLOGY.md  README.md  RESEARCH_TIMELINE.md  VALIDATION.md
.github/: BRANCH_PROTECTION_MAIN.md  CODEOWNERS  FUNDING.yml  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_SETUP.md  PR_TESTING_GUIDE.md  REQUIRED_CHECKS_MAIN.md  SECURITY_TESTING.md  WORKFLOWS_SUMMARY.md  dependabot.yml  detect-secrets.baseline  pull_request_template.md
EXTERNAL_REVIEW_PACKET/: 00_REVIEWER_BRIEF.md  01_CLAIMS.md  02_EVIDENCE_MAP.md  03_REPRO_STEPS.md  04_KNOWN_LIMITATIONS.md  05_ATTACK_SURFACE.md  06_REVIEW_FORM.md  07_EXPECTED_CRITICAL_FINDINGS.md
REPRODUCIBILITY_CAPSULE/: BLACK_REPORT.txt  (+9 more)
analytics/fpma/: README.md  pyproject.toml
analytics/fpma/api/: openapi.yaml
analytics/fpma/geosync_fpma/: __init__.py
analytics/fpma/src/adapters/: local.py
analytics/fpma/src/core/: __init__.py  main.py
analytics/fpma/src/ports/: ports.py
analytics/fpma/tests/: test_core.py
geosync_pro/: README.md  __init__.py  pyproject.toml  version.py
geosync_pro/cli/: run_backtest.py  run_calibrate.py  run_validate.py
geosync_pro/estimation/: belief.py  ekf.py
geosync_pro/models/: emh.py
geosync_pro/policy/: mpc.py
geosync_pro/risk/: cvar.py
geosync_pro/tests/: test_all.py
geosync_pro/validate/: validate.py
rust/geosync-accel/: Cargo.toml  README.md  pyproject.toml
rust/geosync-accel/benches/: numeric.rs
rust/geosync-accel/python/: geosync_accel.pyi
rust/geosync-accel/src/: lib.rs
(+4740 files in other folders)
