[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosync-pro"
version = "0.1.0"
description = "Standalone EMH-inspired neuroeconomic controller extracted from the GeoSync monorepo"
authors = [{ name = "GeoSync Contributors" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
geosync-validate = "geosync_pro.cli.run_validate:main"
geosync-backtest = "geosync_pro.cli.run_backtest:main"
geosync-calibrate = "geosync_pro.cli.run_calibrate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["geosync_pro", "geosync_pro.*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
