[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geosync-fpma"
version = "0.1.0"
description = "Standalone FPMA fractal portfolio and regime model extracted from the GeoSync monorepo"
authors = [{ name = "GeoSync Contributors" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geosync_fpma", "geosync_fpma.*", "src", "src.*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
